--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,7 @@
 [DEFAULT]
 image_width = 128
 image_height = 128
+image_dimensions = 1
 threshold = .5
 verbose = True
 
@@ -11,3 +12,5 @@ classes = Ingame,Break
 train_images_path = ./data/train_data/
 val_images_path = ./data/validation_data/
 
+[LOGGING]
+log_level = INFO
