--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,35 @@
-/data
-/trained_models
+# Byte-compiled / optimized / DLL files
 __pycache__/
-/hauptseminar_310
-/timecalc_env
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
+*.egg
+
+# Virtual environments
+.venv/
+
+# IDE specific files
+.idea/
 .vscode/
+
+# Compiled Python files
+*.pyc
+
+# Logs and databases
+*.log
+*.sqlite3
+
+# OS generated files
 .DS_Store
+Thumbs.db
+
+# Additional folders
 /mlruns
+/data
